LE_SSL/01-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-go
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  tls:
  - hosts:
    - demourl.com
    secretName: echo-tls
  rules:
  - host: demourl.com
    http:
      paths:
      - backend:
          serviceName: go-svc
          servicePort: 80
